--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,7 @@ html {
 
 body {
   margin: 0;
-  padding: 2rem 2rem 0;
-  height: 100%;
   background-color: #192648;
-  /* background-image: url(../images/bg-triangle.svg);
-  background-repeat: no-repeat;
-  background-position: center; */
 }
 
 .triangle {
@@ -177,6 +172,89 @@ body {
 
 .play-button:hover {
   color: red;
+}
+
+.rules {
+  position: absolute;
+  bottom: 0;
+  padding: 24px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.rule-button {
+  float: right;
+  background: transparent;
+  border: 1px solid white;
+  border-radius: 8px;
+  color: white;
+  padding: 10px 32px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.rule-button:hover {
+  color: #ddd;
+  border-color: #ddd;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: flex;
+}
+
+.modal {
+  z-index: 999;
+  background: white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  flex-direction: column;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.modal-header div {
+  text-transform: uppercase;
+  font-size: 26px;
+  font-weight: bold;
+  color: #444;
+}
+
+.modal-header button {
+  background-color: white;
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  color: #888;
+  font-size: 20px;
+}
+
+.modal-header button:hover {
+  color: #000;
+}
+
+.modal-content {
+  padding: 20px 35px;
+}
+
+.modal-backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(22 22 22 / 37%);
 }
 
 @media (max-width: 780px) {
